--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h2>Trolololo</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, voluptas, ullam labore vel, corrupti commodi
         odio quasi porro in hic corporis reprehenderit! Vel iusto fuga quasi explicabo quis tempora minus.</p>
+        <p>Bardzo ważny tekst</p>
 </body>
 
 </html>
